day-9/blogs/infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: pramodgautam145/comments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv-cl-ip
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
