day-9/blogs/infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: pramodgautam145/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv-cl-ip
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4004
      targetPort: 4004
