day-9/blogs/infra/k8s/ingress-srv-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: post-srv-cl-ip
                port:
                  number: 4000
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv-cl-ip
                port:
                  number: 4001
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv-cl-ip
                port:
                  number: 4004
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv-cl-ip
                port:
                  number: 3000
